# Sampler

./: CMakeLists.txt  README.txt
MEL/: Sample.mel
Sampler/: CMakeLists.txt
Sampler/source/: .gitignore  SamplePreviewShapeUI.cpp  SamplePreviewShapeUI.h  VoxelShape.h  VoxelShapeUI.cpp  pluginMain.cpp  tga.cpp  tga.h
src/: .gitignore  RaySampler.cpp  RaySampler.h  SamplePreviewShape.cpp  SamplePreviewShape.h  SamplePreviewShapeUI.cpp  SamplePreviewShapeUI.h  VoxelSamplerNode.cpp  VoxelSamplerNode.h  VoxelShape.cpp  VoxelShape.h  VoxelShapeUI.cpp  VoxelShapeUI.h  pluginMain.cpp
